# dialogue

./: .gitignore  README.rst  f.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
demo/: audio.py  test.py  whisper.py
