[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sounddevice = "^0.4.5"
numpy = "^1.24.2"
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-win_amd64.whl"}
openai-whisper = {git = "https://github.com/openai/whisper.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
ipykernel = "^6.21.0"
black = "21.12b0"        # code formatting
isort = "5.10.1"       # import sorting
flake8 = "4.0.1"       # code analysis

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
